RESOLVED FIXED141904
UNREACHABLE_FOR_PLATFORM() should be release assert
https://bugs.webkit.org/show_bug.cgi?id=141904
Summary UNREACHABLE_FOR_PLATFORM() should be release assert
Csaba Osztrogonác
Reported 2015-02-23 06:20:00 PST
UNREACHABLE_FOR_PLATFORM() should be release assert
Attachments
Patch (2.36 KB, patch)
2015-02-23 06:21 PST, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2015-02-23 06:21:15 PST
Csaba Osztrogonác
Comment 2 2015-02-23 06:25:36 PST
Now it is relase assert with clang, but debug assert otherwise. Additionally RELEASE_ASSERT_NOT_REACHED(); is simple crash in release mode, but it is more verbose in debug mode. Releated discussion can be found here: https://bugs.webkit.org/show_bug.cgi?id=141489#c10 ( and c11, c12 ) just a note: It depends on bug141903. We should wait until bug141903 is fixed not to break the ARM traditional world.
WebKit Commit Bot
Comment 3 2015-02-26 02:51:16 PST
Comment on attachment 247114 [details] Patch Clearing flags on attachment: 247114 Committed r180668: <http://trac.webkit.org/changeset/180668>
WebKit Commit Bot
Comment 4 2015-02-26 02:51:19 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.