UNREACHABLE_FOR_PLATFORM() should be release assert https://bugs.webkit.org/show_bug.cgi?id=141904

Reviewed by Darin Adler.

* wtf/Assertions.h:
(UNREACHABLE_FOR_PLATFORM):


Canonical link: https://commits.webkit.org/160074@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180668 268f45cc-cd09-0410-ab3c-d52691b4dbfc